@@ -10,6 +10,7 @@
 * Added nanomsg library to QMake build files.
 * Fixed nanomsg library in QMake build files.
 * Added nanomsg dependencies to PKGBUILD files.
+* Added clean tear-down and start-up to Server.
 
 SphereSim 3.0.3:
 * Removed custom Array class, replaced by std::vector.
